--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-OPENAI_API_KEY=sk-...
-SLACK_APP_TOKEN=xapp-....
-SLACK_BOT_TOKEN=xoxb-....
-HUMANLOOP_API_KEY=hl_sk_...
-LINEAR_API_KEY=lin_api_...
+OPENAI_API_KEY=secrets.OPENAI_API_KEY
+SLACK_APP_TOKEN=secrets.SLACK_APP_TOKEN
+SLACK_BOT_TOKEN=secrets.SLACK_BOT_TOKEN
+HUMANLOOP_API_KEY=secrets.HUMANLOOP_API_KEY
+LINEAR_API_KEY=
